# FileDigest

./: Cargo.toml  README.md  myfile.txt
src/: cli.rs  error.rs  file_hash.rs  jobs.rs  lib.rs  main.rs  tui.rs  utils.rs
tests/: integration_tests.rs
