[package]
name = "file-hasher"
version = "0.1.0"
edition = "2021"

[dependencies]

clap = { version = "4", features = ["derive"] }
ratatui = "0.23"        
crossterm = "0.26"      
blake3 = "1.4"
walkdir = "2.3"

crossbeam-channel = "0.5"

thiserror = "1.0"
anyhow = "1.0"          # for ergonomic top-level errors
log = "0.4"
env_logger = "0.10"

hex = "0.4"
num_cpus = "1.16"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
